--- a/src/Components/PricingPlans/PricingPlans.css
+++ b/src/Components/PricingPlans/PricingPlans.css
@@ -1,20 +1,46 @@
-.Maindiv{
-    max-height: 100px;
-}
-.fdiv{
-    max-height: 450px;
-}
-.seconddiv{
-   width: 350px; 
-}
-.ptag{
-    height: 50px;
-    color: white !important;
-}
-.lifirst{
-    /* width: 100%; */
-    border-top: 1px solid rgb(218, 218, 218)
-}
-.ptop{
-    background: #F4EDDF;
-}
+@media (max-width: 768px) {
+    .Maindiv {
+      max-height: auto;
+    }
+  
+    .fdiv {
+      max-height: auto; 
+    }
+  
+    .seconddiv {
+      width: 100%;
+    }
+  
+    .ptag {
+      height: auto;
+      font-size: 1rem;
+    }
+  
+    .lifirst {
+      border-top: none;
+    }
+  }
+  
+  /* For Mobile Phones */
+  @media (max-width: 576px) {
+    .Maindiv {
+      max-height: auto;
+    }
+  
+    .fdiv {
+      max-height: auto;
+    }
+  
+    .seconddiv {
+      width: 100%;
+    }
+  
+    .ptag {
+      height: auto; 
+      font-size: 0.875rem;
+    }
+  
+    .lifirst {
+      border-top: none;
+    }
+  }
