--- a/src/Components/ProductCard/ProductCard.css
+++ b/src/Components/ProductCard/ProductCard.css
@@ -1,3 +1,34 @@
+.imgsize{
+  max-height: 150px;
+}
+
+
+.Maindiv {
+  max-height: 100px;
+}
+
+.fdiv {
+  max-height: 450px;
+}
+
+.seconddiv {
+  width: 350px;
+}
+
+.ptag {
+  height: 50px;
+  color: white !important;
+}
+
+.lifirst {
+  border-top: 1px solid rgb(218, 218, 218);
+}
+
+.ptop {
+  background: #F4EDDF;
+}
+
+
 .card {
   border: none;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -20,4 +51,51 @@
 .btn-secondary {
   background-color: #6c757d;
   border: none;
+}
+
+/* Responsive CSS */
+@media (max-width: 768px) {
+  .card {
+    padding: 15px;
+    margin: 10px;
+  }
+
+  .card-title {
+    font-size: 1.125rem;
+  }
+
+  .card-text {
+    font-size: 0.875rem;
+  }
+
+  .btn-primary {
+    padding: 10px 20px;
+  }
+
+  .btn-secondary {
+    padding: 10px 20px;
+  }
+}
+
+@media (max-width: 576px) {
+  .card {
+    padding: 10px;
+    margin: 5px;
+  }
+
+  .card-title {
+    font-size: 1rem;
+  }
+
+  .card-text {
+    font-size: 0.75rem;
+  }
+
+  .btn-primary {
+    padding: 8px 16px;
+  }
+
+  .btn-secondary {
+    padding: 8px 16px;
+  }
 }
