--- a/src/Components/SearchComponent/SearchComponent.css
+++ b/src/Components/SearchComponent/SearchComponent.css
@@ -1,3 +1,38 @@
-.popular-domains{
-    width:90%;
-}
+
+
+@media (max-width: 768px) {
+    .popular-domains {
+      width: 100%;
+      margin-left: 0;
+      margin-right: 0;
+    }
+  
+    .popular-domains-title {
+      font-size: 1.25rem;
+    }
+  
+    .list-inline {
+      flex-wrap: wrap;
+    }
+  
+    .domain-button {
+      margin: 5px;
+      font-size: 0.875rem;
+    }
+  }
+  
+  @media (max-width: 576px) {
+    .popular-domains {
+      width: 100%;
+    }
+  
+    .popular-domains-title {
+      font-size: 1rem;
+    }
+  
+    .domain-button {
+      margin: 4px;
+      font-size: 0.75rem;
+    }
+  }
+  
